--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
 
     <MudNavGroup Title="Race factors" Icon="@IconCollection.SteeringWheel" @bind-Expanded="@factorsExpanded">
         <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Garage">Manufacturers</MudNavLink>
-        <MudNavLink Href="/strategies" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalGasStation">Strategies</MudNavLink>
+        <MudNavLink Href="/tyres" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalGasStation">Tyres</MudNavLink>
         <MudNavLink Href="/incidents" Match="NavLinkMatch.Prefix" Icon="@IconCollection.TrafficCone">Incidents</MudNavLink>
         <MudNavLink Href="/climates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Climates</MudNavLink>
     </MudNavGroup>
