UI upgrades and an avg func

--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -3,7 +3,7 @@
 @inject IDialogService _dialogService
 
 <MudContainer MaxWidth="MaxWidth.Large">
-    <MudDataGrid T="Climate" Items="@ClimateData" Class="overflow-x-hide" Dense="true">
+    <MudDataGrid T="Climate" Items="@ClimateData" Dense="true" Class="overflow-hidden mt-2">
         <ToolBarContent>
             <MudText Typo="Typo.h4">Climate</MudText>
             <MudSpacer />
