--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -31,7 +31,7 @@
                                     <MudNumericField T="int" @bind-Value="Model.RngMaximum" Label="Race Max. RNG" Class="field-md" />
                                 </MudStack>
                                 <MudStack Row="true" Spacing="4">
-                                    <MudNumericField T="int" @bind-Value="Model.PitMinimum" Min="0" Max="@(Model.PitMaximum)" Label="Pit Min. RNG" Class="field-md" />
+                                    <MudNumericField T="int" @bind-Value="Model.PitMinimum" Min="0" Label="Pit Min. RNG" Class="field-md" />
                                     <MudNumericField T="int" @bind-Value="Model.PitMaximum" Min="@(Model.PitMinimum)" Label="Pit Max. RNG" Class="field-md" />
                                 </MudStack>
                                 <MudNumericField T="int" @bind-Value="Model.MaximumDriversInRace" Label="Maximum allowed drivers in race" Class="field-md" />
@@ -102,9 +102,12 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] protected MudDialogInstance? SeasonDialog { get; set; }
-    [Parameter] public EditSeasonModel Model { get; set; }
-    [Parameter] public List<League> Leagues { get; set; }
+    [CascadingParameter]
+    protected MudDialogInstance? SeasonDialog { get; set; }
+    [Parameter]
+    public EditSeasonModel Model { get; set; }
+    [Parameter]
+    public List<League> Leagues { get; set; }
 
     private EditPointAllotmentModel allotmentBackup;
 
