--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -47,7 +47,7 @@
                         @foreach (var rangeGroup in context.Item.DevelopmentRanges.GroupBy(e => e.Type))
                         {
                             <MudStack>
-                                <MudText Typo="Typo.overline">@rangeGroup.Key</MudText>
+                                <MudText Typo="Typo.subtitle1">@rangeGroup.Key</MudText>
                                 <MudSimpleTable>
                                     <thead>
                                         <tr>
