--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -73,6 +73,19 @@
                         </MudSimpleTable>
                     </MudPaper>
                 </MudItem>
+                <MudItem xs="12" sm="6">
+                    <MudPaper>
+                        <MudText Typo="Typo.h1">Header1</MudText>
+                        <MudText Typo="Typo.h6">Header6</MudText>
+                        <MudText Typo="Typo.subtitle1">Subheader1</MudText>
+                        <MudText Typo="Typo.subtitle2">Subheader2</MudText>
+                        <MudText Typo="Typo.body1">Body1</MudText>
+                        <MudText Typo="Typo.body2">Body2</MudText>
+                        <MudText Typo="Typo.button">Button</MudText>
+                        <MudText Typo="Typo.caption">Caption</MudText>
+                        <MudText Typo="Typo.overline">Overline</MudText>
+                    </MudPaper>
+                </MudItem>
             </MudGrid>
         </MudItem>
         <MudItem xs="3">
